<resources>
    <string name="app_name">Get Clima</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_Email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_Csenha">Confirmar Senha</string>
    <string name="btnSalvar">Salvar</string>
    <string name="btnLogin">Entrar</string>
    <string name="btnCadastro">Cadastre-se</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="contentLogo">Logo do Aplicativo</string>
    <string name="txtCadastro">Ainda não possui uma conta?</string>
    <string name="txtCadastroTela">Cadastro</string>
    <string name="txtPerfilTela">Perfil</string>
    <string name="vazio">ㅤ</string>
    <string name="umidade">Umidade:</string>
    <string name="vento">Velocidade do vento:</string>
    <string name="escolha">Escolha uma cidade</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="min">Mín.:&#160;</string>
    <string name="max">Máx.:&#160; </string>
    <string name="por">Pôr do Sol:</string>
    <string name="nascer">Nascer do Sol:</string>

</resources>