<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity"
    android:background="@drawable/gradient_backgroud">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="125dp"
        android:layout_marginBottom="240dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/hint_Email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/fade_out_white" />

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/hint_senha"
            android:inputType="textPassword"
            android:textColorHint="@color/fade_out_white" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="168dp"
        android:backgroundTint="@color/ligth_yellow"
        android:onClick="logar"
        android:text="@string/btnLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnCadastrar"
        android:onClick="abrirCadastro"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="@color/ligth_yellow"
        android:text="@string/btnCadastro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="324dp"
        android:layout_height="253dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_getclima" />

</androidx.constraintlayout.widget.ConstraintLayout>