<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.InicioFragment"
    android:background="@drawable/background_principal">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="403dp"
        android:layout_height="360dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/txtCidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Cidade"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCondicao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-6dp"
            android:text="Condição"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/imgCondicao"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_launcher_background"
            tools:layout_editor_absoluteX="165dp"
            tools:layout_editor_absoluteY="168dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="T"
                android:textSize="65sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtGraus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="º"
                android:textSize="65sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCelcius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="C"
                android:textSize="65sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-7dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:text="@string/min"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtMinimo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:text="0"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtGrausMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="º"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCelciusMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="C"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="0"
                android:text="@string/max"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtMaximo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:text="0"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtGrausMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="º"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCelciusMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="C"
                android:textSize="18sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="383dp"
        android:layout_height="300dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/box"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgSunrise"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="Nascer do Sol"
                android:src="@drawable/sunrise" />

            <TextView
                android:id="@+id/txtNas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:text="@string/nascer"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtNascerDoSol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:text="0"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgSunset"
                android:layout_width="39dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="Por do Sol"
                android:src="@drawable/sunset" />

            <TextView
                android:id="@+id/txtPo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/por"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtPorDoSol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"
                android:text="0"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgMoisture"
                android:layout_width="44dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="Umidade"
                android:src="@drawable/moisture" />

            <TextView
                android:id="@+id/txtU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:text="@string/umidade"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtUmidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:text="0"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txtPorcentagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:text="%"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgWind"
                android:layout_width="44dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="Velocidade do Vento"
                android:src="@drawable/wind" />

            <TextView
                android:id="@+id/txtV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"
                android:text="@string/vento"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtVento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"
                android:text="0"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="366dp"
            android:layout_height="83dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/box"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtData1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="Data"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="-7dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtM1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:text="@string/min"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/txtMinimo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:text="0"
                        android:textSize="17sp" />
                    <TextView
                        android:id="@+id/txtGrausMin1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="º"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtM2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="7dp"
                        android:layout_weight="0"
                        android:text="@string/max"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/txtMaximo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:text="0"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/txtGrausMax1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="º"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtData2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="Data"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="-7dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtM5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:text="@string/min"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/txtMinimo2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:text="0"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/txtGrausMin2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="º"
                        android:textSize="17sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/txtM6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="7dp"
                        android:layout_weight="0"
                        android:text="@string/max"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/txtMaximo2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:text="0"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/txtGrausMax2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="º"
                        android:textSize="17sp"
                        android:textStyle="bold" />




                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>